--- a/inventory/host_vars/domain/vars.yml
+++ b/inventory/host_vars/domain/vars.yml
@@ -78,6 +78,8 @@ traefik_configuration_extension_yaml: |
       unmanaged:
         insecureSkipVerify: true
 
+traefik_additional_domains_to_obtain_certificates_for: "*.{{domain}}"
+
 ########################################################################
 #                                                                      #
 # /Traefik                                                             #
